2010-07-15 Borut Razem <borut.razem AT siol.net>
	* sdas/as8051/Makefile.in, sdas/asz80/Makefile.in,
	  sdas/linksrc/Makefile.in, sdas/as6808/Makefile.in,
	  sdcc/sdas/asgb/Makefile.in:
	  fixed bug #3030113: assembler Makefile.in missing trailing '@' on
	  MAKEPDEP= stmt

2010-07-11 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCsymt.h: added IS_SMALL_PTR
	* src/mcs51/ralloc.c (packRegsForOneuse): check for small pointers, check
	    all subsequent params to fix bug 3004918
	* support/regression/tests/bug3004918.c: new, added
	* src/SDCCloop.c: cosmetic changes
	* src/mcs51/main.c (_mcs51_keywords): removed duplicate keywords,
	  (get_model): fixed bug 3018737

2010-07-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (processParms): fixed bug 3002698
	* src/SDCCast.h: cosmetic changes

2010-07-05 Borut Razem <borut.razem AT siol.net>
	* support/regression/ports/pic14/spec.mk,
	  support/regression/ports/pic16/spec.mk,
	  support/regression/ports/ds390/spec.mk,
	  support/regression/ports/hc08/spec.mk,
	  support/regression/ports/ucz80/spec.mk,
	  support/regression/ports/mcs51-common/spec.mk:
	  mingw build cross reggression testing with wine

2010-07-03 Philipp Klaus Krause <pkk AT spth.de>
	* support/scripts/sdcc.nsi: removed unix2dos conversion

2010-06-28 Philipp Klaus Krause <pkk AT spth.de>
	* device/lib/z80/modmixed.s:
	  Fixed missing line.

2010-06-25 Borut Razem <borut.razem AT siol.net>

	* device/lib/pic16/libsdcc/float/*, device/lib/pic16/startup/*:
	  sdcc library license changed to GPL+LE

2010-06-25 Philipp Klaus Krause <pkk AT spth.de>
	* device/lib/z80/mod.s,
	  device/lib/z80/Makefile.in,
	  device/lib/z80/modmixed.s,
	  device/lib/z80/modsigned.s,
	  device/lib/z80/divmixed.s,
	  device/lib/z80/divsigned.s,
	  device/lib/z80/modunsigned.s:
	  Z80 division library reorganization.

2010-06-23 Philipp Klaus Krause <pkk AT spth.de>
	* device/lib/z80/divsigned.s:
	  Minor cleanup
	* src/SDCCpeeph.c,
	  src/z80/peep.h,